mdapipkg/unpackaged/objects/AcquiredAccount__c.object
<CustomObject>
    <fields>
        <fullName>AcctId__c</fullName>
        <label>AcctId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>BillingState</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>CloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Acquired Account</label>
    <nameField>
        <label>Acquired Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acquired Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>